--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -75,6 +75,14 @@
             color: #000;
             margin-top: 10px;
         }
+        .BigImg {
+            width:90%;
+            margin: 0 auto;
+            text-align: center;
+            .img {
+                width:100%;
+            }
+        }
         .content {
             color:#000;
         }
