--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -18,6 +18,11 @@
         .size(6);
         .size-xs(12);
         .my-content {
+            .top__panel{
+                a {
+                    color:#000;
+                }
+            }
             display: flex;
             flex-direction: column;
             text-align: center;
